# ingestor-kafka

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-release.yml
encoder/: Cargo.toml
encoder/src/: compression.rs  convert.rs  extract_memos.rs  hash.rs  lib.rs  option_serializer.rs  parse_accounts.rs  parse_address_lookup_table.rs  parse_instruction.rs  parse_token.rs  sanitize.rs  transaction_status.rs
encoder/src/proto/: solana.storage.confirmed_block.rs  solana.storage.transaction_by_addr.rs
service/: Cargo.toml
service/src/: cli.rs  config.rs  consumer.rs  hbase.rs  ledger_storage.rs  lib.rs  producer.rs
