[package]
name = "sol-block-encoder-service"
version = "1.2.1"
description = "Solana Block Encoder Service"
authors = ["Aurimas Narkevicius <aurimas.n@dexterlab.com>"]
license = "Apache-2.0"
repository = "https://github.com/dexterlaboss/solana-lite-rpc-storage-ingestor"
homepage = "https://dexterlab.com"
edition = "2021"

[dependencies]
bytes = "1.2"
clap = "2.33.1"
log = "0.4.17"
env_logger = "0.9.0"
envy = "0.4.2"
prost = "0.11.0"
prost-types = "0.11.1"
serde = "1.0.144"
serde_derive = "1.0.103"
#serde_json = "1.0.83"
serde_json = { version = "1.0.83", features = ["float_roundtrip"] }
borsh = "0.9.1"
borsh-derive = "0.9.1"
bs58 = "0.4.0"
base64 = "0.13.0"
console = "0.15.0"
pretty-hex = "0.3.0"
futures = "0.3.24"
#hdrs = "0.1.4"
thiserror = "1.0"
dotenv = "0.15.0"
bincode = "1.3.3"
hbase-thrift = "=1.1.0"
thrift = "0.15.0"
thrift-pool = "=1.4.0"
#hdfs = "0.0.4"
chrono = { version = "0.4.22", features = ["serde"] }
backoff = { version = "0.4.0", features = ["tokio"] }
solana-binary-encoder = { path = "../encoder", version = "=1.2.1" }
solana-clap-utils = "=1.16.15"
solana-sdk = "=1.16.15"
solana-storage-proto = "=1.16.15"
solana-version = "=1.16.15"
rust_decimal = "1.0"
hex = "0.4.3"
md5 = "0.7"
memcache = "0.17.2"

[dependencies.tokio]
features = ["rt-multi-thread", "macros", "io-util"]
version = "1.11.0"

[dependencies.rdkafka]
features = ["cmake-build", "gssapi", "ssl", "sasl", "tokio"]
version = "0.29.0"
# git = "https://github.com/fede1024/rust-rdkafka"
# rev = "65520c820565f9882475cc29cd6d149940515324"

[lib]
crate-type = ["lib"]
#path = "src/encoder"
name = "service"

[build-dependencies]
rustc_version = "0.4"

[[bin]]
name = "block-encoder-service"
path = "src/bin/sol-block-encoder-service.rs"

[[bin]]
name = "block-uploader"
path = "src/bin/sol-block-uploader.rs"